# x3d_mcp

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
dataset/: augment.py  filter.py  generate.py  normalize.py  schema.py  validate_schema.py
dataset/generators/: numeric_sequences.py
docs/: ecosystem-research.md  x3d-examples.md  x3d-file-structure.md  x3d-node-reference.md  x3d-standard-overview.md  x3d-tools-and-references.md  x3d-validation-strategy.md
examples/: 01_basic_geometry.md  02_composed_table.md  03_doha_google_apis.md
examples/scenes/: doha_qatar.x3d  red_sphere.x3d  table_scene.x3d
examples/viewer/: index.html
output/: j24_monterey_bay.x3d
src/: server.py
src/tools/: convert.py  granular.py  query.py  validate_tool.py  workflow.py
src/validation/: validate.py
src/validation/schemas/: X3dUnifiedObjectModel-4.1.xml  x3d-4.0-Web3dExtensionsPrivate.xsd  x3d-4.0-Web3dExtensionsPublic.xsd  x3d-4.0.dtd  x3d-4.0.profile.xml  x3d-4.0.xsd  x3d-4.1.dtd  x3d-4.1.xsd
src/x3d_utils/: scene.py  tooltips.py  x3duom.py
tests/: test_augment.py  test_dataset.py  test_examples.py  test_generators.py  test_scene.py  test_tools.py  test_tooltips.py  test_validation.py  test_x3duom.py
